# qfutils

./: Makefile  pyproject.toml
.devcontainer/: devcontainer.json
qfutils/: ds.py
test/: test_ds.py
