[tool.poetry]
name = "fqutils"
version = "0.1.0"
description = "Utilitaries"
authors = ["Quentin Fortier <qpfortier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
